# obscura

./: .gitignore  LICENSE  README.md  package.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: colors.xml  themes.xml
gradle/: libs.versions.toml
programs/: Anchor.toml  Cargo.toml
programs/obscura/: Cargo.toml
programs/obscura/src/: lib.rs  mod.rs
programs/obscura/src/instructions/: deposit.rs  mod.rs  private_swap.rs  transfer.rs  withdraw.rs
programs/obscura/src/state/: commitment.rs  mod.rs  nullifier.rs  shielded_pool.rs
programs/obscura/src/utils/: merkle.rs  mod.rs  proofs.rs
programs/tests/: confidential-transfer.ts  obscura.ts  shielded-pool.ts
web/: .env.example  next.config.js  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/swap/: page.tsx
web/src/app/transfer/: page.tsx
web/src/components/swap/: SwapInterface.tsx  SwapSettings.tsx
web/src/components/transfer/: BalanceDisplay.tsx  DepositForm.tsx  TransferForm.tsx  WithdrawForm.tsx
web/src/components/wallet/: WalletProvider.tsx
web/src/hooks/: useConfidentialBalance.ts  usePrivateSwap.ts  useShieldedPool.ts
web/src/lib/helius/: das.ts  priority-fee.ts  sender.ts  webhooks.ts  zk-compression.ts
web/src/lib/shielded/: commitments.ts  merkle.ts  pool.ts
web/src/lib/solana/: confidential.ts  keys.ts  proofs.ts  rpc.ts
web/src/lib/swap/: jupiter.ts
web/src/lib/utils/: format.ts
web/src/providers/: SolanaProvider.tsx
(+36 files in other folders)
