[package]
name = "obscura"
version = "0.1.0"
description = "Privacy-preserving swap and transfer on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obscura"

[features]
no-entrypoint = []
no-idl = []
no-log-iv-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
solana-program = "1.18"
